--- a/front/public/index.html
+++ b/front/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+      <meta name="description" content="Курсовой проект студента группы 191-361 Козлов Александра"/>
+      <meta name="Keywords" content="Салон красоты, маникюр, педикюр, массаж, косметология, парикмахерский зал">
   </head>
   <body id="app">
     <noscript>
